
### 27.09.2017
- changed getQuartic like functions to multiplication with dot instead of asterisk
- changed occupation numbers to be also calculated when reducing from state (this was a feature previously)
- added more information to progress.log and included print commands in respective methods
- huge cleanup with PyCharm - basically initialized every variable and made everything explicit

### 26.09.2017
- added optimizations for only one level left
- added optimizations for only two levels overall
- also added those for reduce from state - try this for those cases
- !!! fixed a bug where the density matrix indicator was not set correctly, resulting in a reallocation every time!
- changed cosmetics of progress bar

### 25.09.2017
- added a self-programmed DFT to the code (as an external python file dft.py)

### 21.09.2017
- fixed bug where plotting of energies fails - a backslash was too much in the axix label
- changed expectation value of energy format from 'e' to 'f'
- added a factor of 2 to the time steps in FT of Green function, since the difference times changes by 2 deltaT

### 20.09.2017
- added some booleans to control folder management

### 19.09.2017
- changed offdiag config parameter to offdiagocc
- renamed occensingles config parameter to offdiagoccsingles
- renamed files:
    offdiagonal to offdiagocc
    offdiagsingles to offdiagoccsingles
    offdiagsingleinfo to offdiagoccsinglesinfo
    diagsingles to diagoccsingles
    diagexpect to diagoccexpect

- renamed plotting of offdiagonals from plotOffDiagSingles to plotOffDiagOccSingles
- in entPlot.py renamed plotOffDiagSingles to plotOffDiagOccSingles
- added the same procedure for offdiagdens and offdiagdensred
    this includes calculation, hamiltonian initialization for the reduced space and plotting
- removed unused tmp declaration in al initHamiltonian like methods
- changed problem where typecasting of the dimension in dimOfBasis was not recognized properly